# openstream-server

./: CMakeLists.txt  README.md  appveyor.yml  gen-deb.in  opentrea.service.in
assets/: opentrea.conf  sunshine.conf
openstream/: audio.h  config.cpp  config.h  crypto.cpp  crypto.h  input.cpp  input.h  main.cpp  main.h  network.h  nvhttp.cpp  nvhttp.h  process.h  rtsp.h  stream.h  sync.h  thread_safe.h  video.h
openstream/platform/: common.h
openstream/platform/linux/: display.cpp  input.cpp
openstream/platform/windows/: audio.cpp  display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  input.cpp
opentrea/: audio.h  config.cpp  config.h  crypto.cpp  crypto.h  input.cpp  input.h  main.cpp  main.h  network.h  nvhttp.cpp  nvhttp.h  process.h  rtsp.h  stream.h  sync.h  thread_safe.h  video.h
opentrea/platform/: common.h
opentrea/platform/linux/: display.cpp  input.cpp
opentrea/platform/windows/: audio.cpp  display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  input.cpp
tools/: CMakeLists.txt  audio.cpp  dxgi.cpp
